Added test file for parsing, grammar tweaks
Some parser testing included, very WIP

--- a/src/NoWa.Console/NoWa.Console.csproj
+++ b/src/NoWa.Console/NoWa.Console.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\NoWa.Converter\NoWa.Converter.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="test.wag" Condition="'$(Configuration)'=='Debug'">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
