--- a/src/NoWa.Console/NoWa.Console.csproj
+++ b/src/NoWa.Console/NoWa.Console.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Nowa.Common\NoWa.Common.csproj" />
     <ProjectReference Include="..\NoWa.Converter\NoWa.Converter.csproj" />
+    <ProjectReference Include="..\NoWa.Parser\NoWa.Parser.csproj" />
   </ItemGroup>
 
   <ItemGroup>
