Added logging and conversion steps
The new logging with log levels allows controlling how much output is given.

Conversion steps are now performed as a kind of strategy pattern, allowing more flexible step construction and composition, as well as improving encapsulation.

These changes should allow for easier unit testing too.

--- a/src/NoWa.Console/Properties/launchSettings.json
+++ b/src/NoWa.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NoWa.Console": {
       "commandName": "Project",
-      "commandLineArgs": "./test.wag"
+      "commandLineArgs": "./test.wag -log debug"
     }
   }
 }
