--- a/src/Parser/NoWa.Parser.csproj
+++ b/src/Parser/NoWa.Parser.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nowa.Common\NoWa.Common.csproj" />
+    <ProjectReference Include="..\Common\NoWa.Common.csproj" />
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
