Unit testing for common library

--- a/test/Converter/Nowa.Test.Converter.csproj
+++ b/test/Converter/Nowa.Test.Converter.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
+    <Using Include="NoWa.Test.Shared" />
   </ItemGroup>
 
 </Project>
