--- a/src/Parser/NoWa.Parser.csproj
+++ b/src/Parser/NoWa.Parser.csproj
@@ -14,6 +14,10 @@
     <ProjectReference Include="..\Common\NoWa.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Generated\" />
+  </ItemGroup>
+
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="call antlrbuild.bat" />
   </Target>
