Parser testing for CFGs
Shows some confidence in the validity of the parser.
Improvements had to be made to the grammar after an issue with nonterminal names was found.

--- a/test/Parser/Nowa.Test.Parser.csproj
+++ b/test/Parser/Nowa.Test.Parser.csproj
@@ -26,4 +26,10 @@
     <Using Include="NoWa.Test.Shared" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestFiles\NoWaCFGParserTests\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
